--- a/good.html
+++ b/good.html
@@ -112,9 +112,10 @@
   <a href="#" class="btn btn-outline-primary rounded-pill">Licences</a>
   <a href="#" class="btn btn-outline-primary rounded-pill">Support</a>
 
-  <a href="#" class="btn download-btn rounded-pill">DOWNLOAD</a>
+  <a href="https://play.google.com/store/apps/details?id=jp.konami.pesam&hl=en" class="btn download-btn rounded-pill">DOWNLOAD</a>
 
-  <a href="#" class="btn epoints-btn rounded-pill">
+
+  <a href="https://efootball-point.konami.net/" class="btn epoints-btn rounded-pill">
     <img src="https://efootball-point-cdn.konami.net/front/images/logo_ePoint.png" alt="ePoints">
   </a>
 
