--- a/music.html
+++ b/music.html
@@ -168,6 +168,13 @@
       </div>
     </div>
   </div>
+  <iframe style="border-radius:12px"
+src="https://open.spotify.com/embed/track/2d8JP84HNLKhmd6IYOoupQ"
+width="100%" height="152"
+frameborder="0"
+allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+loading="lazy"></iframe>
+
 
   <script>
     const playlist = [
